# PWSat2OBC

./: .clang-format  .cproject  .gitattributes  .gitignore  CMakeLists.txt  Jenkinsfile  Readme.md  detumbling.cpp  detumbling.hpp  doxyfile  dummy.cpp  external_ping.py  groups  project.config  toolchain.cmake
Applications/Common/: CMakeLists.txt  Makefile
Applications/PWSat2/: CMakeLists.txt  Makefile
FreeRTOS/: CMakeLists.txt  Makefile
boot/: CMakeLists.txt  background.c  background.cpp  background.h  boot.c  boot.cpp  boot.h  comms.c  comms.cpp  comms.h  crc.c  crc.cpp  error_counter.cpp  error_counter.hpp  fault_handlers.c  fault_handlers.cpp  flash.c  flash.cpp  flash.h  flash_driver.cpp  flash_driver.hpp  includes.h  main.c  main.cpp  main.hpp  spi.cpp  spi.hpp  xmodem.c  xmodem.cpp  xmodem.h
boot/commands/: boot_table.cpp  booting.cpp  check.cpp  commands.hpp  fram.cpp  settings.cpp  test.cpp  upload.cpp
deep_sleep/: CMakeLists.txt  comm.cpp  dummy_os.cpp  eps.cpp  fault_handler.cpp  flash_eraser.cpp  main.cpp  scrubbing.cpp  sleep.cpp  state.cpp  timer.cpp
deep_sleep/include/: comm.hpp  config.hpp  eps.hpp  flash_eraser.hpp  scrubbing.hpp  sleep.h  state.hpp  timer.h
libs/: CMakeLists.txt  CMakeLists.txt.BACKUP.17752.txt
libs/FreeRTOS/: build.cmake
libs/adcs/: AdcsCoordinator.cpp  CMakeLists.txt  adcs.c  adcs.cpp  detumbling.cpp  imtq.cpp
libs/adcs_experiments/: CMakeLists.txt  detumbling.cpp
libs/assert/: CMakeLists.txt  assert.cpp
libs/base/: BitWriter.cpp  CMakeLists.txt  crc.cpp  ecc.c  ecc.cpp  io_map.h  os_base.cpp  reader.c  reader.cpp  redundancy.cpp  utils.cpp  writer.c  writer.cpp
libs/beacon/: CMakeLists.txt  sender.cpp
libs/boot_params/: CMakeLists.txt  params.cpp
libs/boot_settings/: CMakeLists.txt  settings.cpp
libs/camera/: CMakeLists.txt  camera.cpp  camera_internal.cpp  camera_utils.cpp
libs/comm_handling/: CMakeLists.txt  comm_handling.c.orig  comm_handling.cpp
libs/drivers/: CMakeLists.txt
libs/efm_support/: CMakeLists.txt
libs/error_counter/: CMakeLists.txt  error_counter.cpp
libs/experiments/: CMakeLists.txt  experiments.cpp
libs/free_rtos_wrapper/: CMakeLists.txt  os.cpp
libs/fs/: CMakeLists.txt  extension.c  extension.cpp  fs.c  fs.cpp  nand_driver.c  yaffs.cpp
libs/googletest/: CMakeLists.txt  build.cmake
libs/i2c/: CMakeLists.txt  i2c.c
libs/leuart/: CMakeLists.txt  leuart.c
libs/logger/: CMakeLists.txt  Logger.c  Logger.cpp
libs/mission/: CMakeLists.txt  adcs.c  adcs.cpp  antenna.c  antenna.cpp  mission.c  sail.c  sail.cpp  state.c
libs/obc/: CMakeLists.txt
libs/os/: CMakeLists.txt  os.c  os.cpp
libs/photo/: CMakeLists.txt  commands.cpp  photo_service.cpp
libs/power/: CMakeLists.txt
libs/scrubber/: CMakeLists.txt  boot_settings.cpp  bootloader.cpp  bootloader_copies.cpp  program.cpp  safe_mode.cpp
libs/settings/: CMakeLists.txt  settings.h.template
libs/state/: Antenna.cpp  CMakeLists.txt  ErrorCountersState.cpp  PersistentState.cpp  TimeState.cpp  adcs.cpp  boot.cpp  comm.cpp  sail.cpp  state.c  state.cpp  time.cpp
libs/storage/: CMakeLists.txt  nand.c  nand.cpp  nand_calculator.c  nand_calculator.cpp  nand_driver.c  nand_driver.cpp  storage.c
libs/swo/: CMakeLists.txt  swo.c
libs/telecommand_handling/: CMakeLists.txt  telecommand_handling.cpp  uplink.cpp
libs/telecommunication/: CMakeLists.txt  FrameContentWriter.cpp  beacon.cpp  downlink.cpp  telecommand_handling.cpp  uplink.cpp
libs/telemetry/: CMakeLists.txt  ErrorCounters.cpp  ExperimentTelemetry.cpp  FileSystemTelemetry.cpp  GpioState.cpp  ImtqTelemetry.cpp  McuTemperature.cpp  ProgramState.cpp  SystemStartup.cpp  TimeTelemetry.cpp  state.cpp
libs/terminal/: CMakeLists.txt  terminal.c  terminal.cpp
libs/time/: CMakeLists.txt  TimePoint.cpp  time.c  time.cpp  timer.c  timer.cpp
libs/uart/: CMakeLists.txt  uart.c
libs/version/: CMakeLists.txt
libs/yaffs_glue/: CMakeLists.txt  yaffs_os_glue.c  yaffs_os_glue.cpp
safe_mode/: CMakeLists.txt  dummy_os.cpp  fault_handler.cpp  main.cpp  safe_mode.cpp  safe_mode.hpp
safe_mode/steps/: steps.hpp
sample/: CMakeLists.txt  background.c  background.h  comms.c  comms.h  globals.h  includes.h  main.c  tests.c  tests.h
src/: CMakeLists.txt  assert.c  blink.cpp  blink.hpp  build.cmake  communication.cpp  communication.h  fault_handlers.c  fault_handlers.cpp  file_system.cpp  file_system.h  fs.c  fs_driver.c  fs_driver.h  hardware.cpp  hardware.h  io_map.h  leuart.c  leuart.h  main.c  main.cpp  mission.c  mission.cpp  mission.h  obc.cpp  obc.h  obc.h.BACKUP.4132.h  obc.h.LOCAL.4132.h  obc.h.REMOTE.4132.h  obc.h.orig  obc_access.cpp  obc_access.hpp  obc_time.c  obc_time.h  openSail.c  openSail.h  os_glue.c  port_map.h  semihosting.c  semihosting.h  (+8 more)
src/checks/: checks.cpp  error_counters.cpp
src/commands/: adcs.c  adcs.cpp  antenna.c  antenna.cpp  boot_settings.cpp  camera.c  camera.cpp  comm.c  comm.cpp  comm_test.cpp  commands.h  compile_info.cpp  dma.cpp  eps.cpp  error_counters.cpp  exp_suns.cpp  external_flash.cpp  file_system.c  file_system.cpp  fram.cpp  gyro.cpp  heap.cpp  heap_info.cpp  i2c_test_command.c  i2c_test_command.cpp  imtq.cpp  leop.cpp  memory.cpp  mission.cpp  obc_state.cpp  payload.cpp  ping.c  ping.cpp  program_flash.cpp  rtc.cpp  rtos_status.cpp  runlevel.cpp  sail.cpp  scrub.cpp  state.cpp  (+8 more)
src/devices/: comm.c  comm.h  eps.c  eps.h
src/drivers/: ADXRS453.c  ADXRS453.h  i2c.c  i2c.h  leuart.c  leuart.h
src/n25q/: n25q.cpp  n25q.h
test/: CMakeLists.txt  build.cmake  linker.ld  semihosting.cpp  semihosting.h  test.cpp
test/Comm/: CommTest.cpp
test/Logger/: LoggerTest.cpp
test/base/: ReaderTest.cpp
test/flash/: CMakeLists.txt  fault_handlers.cpp  main.cpp
test/fm_terminal/: CMakeLists.txt  main.cpp
test/generate_exp_data/: CMakeLists.txt  camera_data.cpp  detumbling_data.cpp  leop_data.cpp  main.cpp  (+5 more)
unit_tests/: CMakeLists.txt  ErrorCounterTest.cpp  OsMock.cpp  OsMock.hpp  assert.cpp  common.cmake  gmock-extensions.h  heap.c  heap.cpp  linker.ld  mem.c  mem.cpp  rapidcheck.hpp  semihosting.cpp  test.cpp  utils.cpp  utils.hpp
(+1350 files in other folders)
