add_subdirectory(external/FreeRTOS)
add_subdirectory(external/googletest)
add_subdirectory(external/emlib)
add_subdirectory(external/rapidcheck)
add_subdirectory(external/yaffs)
add_subdirectory(external/emdrv)

add_subdirectory(drivers/leuart)
add_subdirectory(drivers/swo)
add_subdirectory(drivers/i2c)
add_subdirectory(drivers/comm)
add_subdirectory(drivers/adxrs453)
add_subdirectory(drivers/eps)
add_subdirectory(drivers/uart)
add_subdirectory(drivers/camera)

add_subdirectory(base)
add_subdirectory(logger)
add_subdirectory(storage)
add_subdirectory(os)
add_subdirectory(fs)
add_subdirectory(mission)
add_subdirectory(time)
add_subdirectory(state)
add_subdirectory(adcs)
