add_subdirectory(external)
add_subdirectory(drivers)
add_subdirectory(base)
add_subdirectory(logger)
add_subdirectory(storage)
add_subdirectory(os)
add_subdirectory(fs)
add_subdirectory(yaffs_glue)
add_subdirectory(mission)
add_subdirectory(time)
add_subdirectory(state)
add_subdirectory(adcs)
add_subdirectory(power)
add_subdirectory(terminal)
add_subdirectory(assert)
add_subdirectory(comm_handling)