add_subdirectory(leuart)
add_subdirectory(swo)
add_subdirectory(i2c)
add_subdirectory(spi)
add_subdirectory(comm)
add_subdirectory(eps)
add_subdirectory(antenna)
add_subdirectory(imtq)
add_subdirectory(n25q)
add_subdirectory(gpio)
add_subdirectory(burtc)
add_subdirectory(rtc)
add_subdirectory(fm25w)
add_subdirectory(temp)